--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "commiter",
+  "name": "watcher",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
     "node-cmd": "^3.0.0"
   }
 }
